Update - easier to fix potential problems