@@ -100,7 +100,21 @@ cd /d "%~dp0"
 set name=Char%random%%random%
 ren "Char*.jar" "%name%.jar"
 cls
-java -Xmx1g -Xms1g -XX:+UseStringDeduplication -XX:+UseFastAccessorMethods -XX:+UseFastEmptyMethods -XX:+UseConcMarkSweepGC -XX:+EliminateLocks -XX:+AggressiveOpts -XX:+DoEscapeAnalysis -XX:+UseCompressedOops -jar "%name%.jar"
+set args=-server -Xmn128M -Xms256M -Xmx512M
+
+:: If you are having trouble remove any lines below that are causing problems
+set args=%args% -XX:+UseStringDeduplication
+set args=%args% -XX:+UseFastAccessorMethods
+set args=%args% -XX:+UseG1GC
+set args=%args% -XX:+OptimizeFill
+set args=%args% -XX:+UseFastEmptyMethods
+set args=%args% -XX:+EliminateLocks
+set args=%args% -XX:+AggressiveOpts
+set args=%args% -XX:+DoEscapeAnalysis
+set args=%args% -XX:+UseCompressedOops
+:: If you are having trouble remove any lines above that are causing problems
+
+java %args% -jar "%name%.jar"
 pause""".getBytes())
 		
 		Files.copy(file("LICENSE.txt").toPath(), file(new File(dir, "LICENSE.txt")).toPath())
